[package]
name = "tokio-macros"
version = "2.1.0"
edition = "2018"
rust-version = "1.56"
license = "MIT"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0.0", path = "../tokio", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
