[package]
name = "tokio-test"
version = "0.4.2"
edition = "2021"
rust-version = "1.56"
license = "MIT"

[dependencies]
tokio = { version = "1.2.0", path = "../tokio", features = ["rt", "sync", "time", "test-util"] }
tokio-stream = { version = "0.1.1", path = "../tokio-stream" }
async-stream = "0.3.3"

bytes = "1.0.0"
futures-core = "0.3.0"

[dev-dependencies]
tokio = { version = "1.2.0", path = "../tokio", features = ["full"] }
futures-util = "0.3.0"

[package.metadata.docs.rs]
all-features = true
